made the tests to work

--- a/test_medicina/index.html
+++ b/test_medicina/index.html
@@ -13,7 +13,7 @@
 
     <title>Teste Medicina</title>
 </head>
-<body>
+<body class="d-flex flex-column h-100">
  
     <div id="header"></div>
 
@@ -36,19 +36,18 @@
                 <a class="navbar-brand d-block" href="test?test_name=Cardiologie_3">Test Cardiologie 3</a>
                 <a class="navbar-brand d-block" href="test?test_name=Cardiologie_4">Test Cardiologie 4</a>
                 <hr />
-                <a class="navbar-brand d-block" href="test?test_name=ginecologie_1">Test Ginecologie 1</a>
-                <a class="navbar-brand d-block" href="test?test_name=ginecologie_2">Test Ginecologie 2</a>
-                <a class="navbar-brand d-block" href="test?test_name=ginecologie_3">Test Ginecologie 3</a>
-                <a class="navbar-brand d-block" href="test?test_name=ginecologie_4">Test Ginecologie 4</a>
-                <a class="navbar-brand d-block" href="test?test_name=ginecologie_5">Test Ginecologie 5</a>
+                <a class="navbar-brand d-block" href="test?test_name=Ginecologie_1">Test Ginecologie 1</a>
+                <a class="navbar-brand d-block" href="test?test_name=Ginecologie_2">Test Ginecologie 2</a>
+                <a class="navbar-brand d-block" href="test?test_name=Ginecologie_3">Test Ginecologie 3</a>
+                <a class="navbar-brand d-block" href="test?test_name=Ginecologie_4">Test Ginecologie 4</a>
+                <a class="navbar-brand d-block" href="test?test_name=Ginecologie_5">Test Ginecologie 5</a>
                 <hr />
-                <a class="navbar-brand d-block" href="test?test_name=chirurgie_p1_1">Test Chirurgie I 1</a>
-                <a class="navbar-brand d-block" href="test?test_name=chirurgie_p1_2">Test Chirurgie I 2</a>
-                <a class="navbar-brand d-block" href="test?test_name=chirurgie_p1_3">Test Chirurgie I 3</a>
-                <hr />
-                <a class="navbar-brand d-block" href="test?test_name=chirurgie_p2_1">Test Chirurgie II 1</a>
-                <a class="navbar-brand d-block" href="test?test_name=chirurgie_p2_2">Test Chirurgie II 2</a>
-                <a class="navbar-brand d-block" href="test?test_name=chirurgie_p2_3">Test Chirurgie II 3</a>
+                <a class="navbar-brand d-block" href="test?test_name=Chirurgie_p1_1">Test Chirurgie I 1</a>
+                <a class="navbar-brand d-block" href="test?test_name=Chirurgie_p1_2">Test Chirurgie I 2</a>
+                <a class="navbar-brand d-block" href="test?test_name=Chirurgie_p1_3">Test Chirurgie I 3</a>
+                <a class="navbar-brand d-block" href="test?test_name=Chirurgie_p2_1">Test Chirurgie II 1</a>
+                <a class="navbar-brand d-block" href="test?test_name=Chirurgie_p2_2">Test Chirurgie II 2</a>
+                <a class="navbar-brand d-block" href="test?test_name=Chirurgie_p2_3">Test Chirurgie II 3</a>
         
             </div>
 
@@ -59,8 +58,8 @@
     <div id="main-footer"></div>
 </body>
 
-<script src="header.js"></script>
-<script src="content.js"></script>
-<script src="footer.js"></script>
+<script src="../header.js"></script>
+<script src="../content.js"></script>
+<script src="../footer.js"></script>
 
 </html>
