--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Welcome to my page</title>
 </head>
-<body>
+<body  class="d-flex flex-column h-100">
     <div id="header"></div>
 
     <main class="flex-shrink-0">
